# ZedPlayer

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/zedplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/github/zedplayer/: MainActivity.kt  ZedAudioActivity.kt  ZedCutAudioToPcmActivity.kt  ZedGLESActivity.kt  ZedMediaActivity.kt
app/src/main/java/com/github/zedplayer/gles/: ZedGLSurfaceView.kt  ZedRender.kt  ZedShaderHelper.kt
app/src/main/res/layout/: activity_main.xml  activity_zed_audio.xml  activity_zed_cut_audio_to_pcm.xml  activity_zed_gles.xml  activity_zed_media.xml
app/src/main/res/raw/: fragment_shader.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/com/github/zedplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
zedmediaplayerlib/: CMakeLists.txt  build.gradle
zedmediaplayerlib/src/androidTest/java/com/github/zedmediaplayerlib/: ExampleInstrumentedTest.kt
zedmediaplayerlib/src/main/: AndroidManifest.xml
zedmediaplayerlib/src/main/cpp/: FFmpegDefine.h  JniDefine.h  native-lib.cpp  zed-player-lib.cpp
zedmediaplayerlib/src/main/cpp/cjava/: CCallJava.cpp  CCallJava.h
zedmediaplayerlib/src/main/cpp/ffmpeg/: ZedFfmpeg.cpp  ZedFfmpeg.h
zedmediaplayerlib/src/main/cpp/pcms/beans/: ZedPcmBean.cpp  ZedPcmBean.h
zedmediaplayerlib/src/main/cpp/pcms/bufferqueues/: ZedBufferQueue.cpp  ZedBufferQueue.h
zedmediaplayerlib/src/main/cpp/queues/: ZedQueue.cpp  ZedQueue.h
zedmediaplayerlib/src/main/cpp/status/: ZedStatus.cpp  ZedStatus.h
zedmediaplayerlib/src/main/cpp/zedaudio/: ZedAudio.cpp  ZedAudio.h  zed-audio-lib.cpp
zedmediaplayerlib/src/main/cpp/zedvideo/: ZedVideo.cpp  ZedVideo.h
zedmediaplayerlib/src/main/java/com/github/zedmediaplayerlib/audio/: ZedAudioPlayer.kt
zedmediaplayerlib/src/main/java/com/github/zedmediaplayerlib/audio/listener/: OnCompleteListener.kt  OnDBListener.kt  OnErrorListener.kt  OnLoadListener.kt  OnNextListener.kt  OnPauseListener.kt  OnPcmInfoListener.kt  OnPlayTimeListener.kt  OnPreparedListener.kt  OnRecordListener.kt  OnSeekListener.kt  OnStopListener.kt
zedmediaplayerlib/src/main/java/com/github/zedmediaplayerlib/commons/: ZedMediaHelper.kt  ZedMediaStatus.kt  ZedMuteEnum.kt  ZedTimeUtil.kt
zedmediaplayerlib/src/main/java/com/github/zedmediaplayerlib/listener/: OnCompleteListener.kt  OnDBListener.kt  OnErrorListener.kt  OnLoadListener.kt  OnNextListener.kt  OnPauseListener.kt  OnPcmInfoListener.kt  OnPlayTimeListener.kt  OnPreparedListener.kt  OnRecordListener.kt  OnRenderYUVListener.kt  OnSeekListener.kt  OnStopListener.kt
zedmediaplayerlib/src/main/java/com/github/zedmediaplayerlib/media/: ZedMediaPlayer.kt
zedmediaplayerlib/src/main/java/com/github/zedmediaplayerlib/opengles/: ZedMediaRender.kt  ZedMediaShaderHelper.kt  ZedMediaSurfaceView.kt
zedmediaplayerlib/src/main/res/raw/: zed_yuv_fragment_shader.glsl  zed_yuv_vertex_shader.glsl
zedmediaplayerlib/src/test/java/com/github/zedmediaplayerlib/: ExampleUnitTest.kt
